# SynradBenchmark

./: .gitignore  README.md
Compare/: compare.C  compare_diff.C  compare_diff_rough_0nm.C  compare_diff_rough_50nm.C  compare_spec.C  compare_spec_rough_50nm.C
Compare/reflPlot/: plot.C
FreeCAD/: assembly.FCStd  assembly_ASCII_mm.stl  drift1_dipole.FCStd  drift2.FCStd
Synrad+/: README.md
Synrad+/ana/: ana.C
Synrad+/sim/: dipole.param  ir6forward_18GeV_ir6end.syn7z  orbit.coord  region.param  simple_diff.syn  simple_spec.syn
Synrad+/sim/output/: test.csv
Synrad3D/: README.md
Synrad3D/ana/: ana1.py  ana2.C  ana3.C  runAna.bash
Synrad3D/sim/: beam.bmad  simple.lat  simple.lat.digested321  synrad3d.init  synrad3d.wall3d  synrad3d_diff.init  synrad3d_spec.init  synrad3d_track.init
Synrad3D/sim/reflectivity/: SS_30000.0nmCu.gp  copper.rb  material.rb
SynradG4/: LICENSE  README.html  README.md
SynradG4/ana/: CMakeLists.txt  ana.cc  plotTracks.C  runAna.bash  runAna_scan.bash
SynradG4/ana/src/: AnalysisSR.cc  AnalysisSR.hh
SynradG4/sim/: CMakeLists.txt  main.cc  run.mac  runAll.bash  runAll_macbook.bash  runScreens.bash  runScreens_macbook.bash  runScreens_macbook_0.bash  runScreens_macbook_1.bash  runScreens_macbook_2.bash  runScreens_scan.bash  vis.mac
SynradG4/sim/geometry/: setup.xml  setup_0.xml  setup_1.xml  setup_2.xml  setup_3.xml  setup_4.xml
SynradG4/sim/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GammaReflectionProcess.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunMessenger.hh  SimParameters.hh  SolenoidMagField.hh  StackingAction.hh  StackingMessenger.hh  SteppingAction.hh  SynchrotronRadiation.hh  (+1 more)
(+34 files in other folders)
